# TransformsGraph

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TransformsGraphConfig.cmake.in  main.cpp
.github/workflows/: cmake.yaml  examples.yaml  test.yaml
examples/: CMakeLists.txt  eigen_pose_example.cpp  minimal_graph_example.cpp  sophus_pose_example.cpp
include/transform_graph/: abstract_pose.h  graph_search.h  transform_graph.h
include/transforms_graph/: abstract_pose.h  graph_search.h  transforms_graph.h
tests/: CMakeLists.txt  test_graph_search.cpp  test_transforms_graph.cpp
